# TC4018.10-admin-software

./: .gitignore  README.md  prediction_config.json  pyproject.toml  streamlit_app.py
scripts/: generate_screenshots.py  integrate_sample.py
src/salesvision_ai/: __init__.py  main.py
src/salesvision_ai/api/: predict.py  upload.py
src/salesvision_ai/models/: request_models.py  response_models.py
src/salesvision_ai/services/: csv_service.py  prediction_service.py
src/salesvision_ai/utils/: validators.py
tests/: test_prediction.py  test_upload.py
